--- a/src/templates/setting.html
+++ b/src/templates/setting.html
@@ -1,5 +1,5 @@
 <!-- by dribehance <dribehance.kksdapp.com> -->
-<div ui-content-for="title">设置</div>
+<div ui-content-for="title">{{"Setting" | translate}}</div>
 <div ui-content-for="navbarAction"></div>
 <div ui-content-for="backAction">
     <span class="btn" ng-click="back()"><i class="fa fa-chevron-left"></i></span>
@@ -8,7 +8,7 @@
     <div class="scrollable-content">
     	<div class="list-group">
     		<a ng-href="#/modify_signin_password" class="list-group-item">
-                <span class="list-group-item-text">修改登录密码</span>
+                <span class="list-group-item-text">{{"Change Password" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
     	</div>
@@ -25,10 +25,10 @@
                 <span class="list-group-item-text">{{"Terms of Use" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a> -->
-            <a class="list-group-item">
+            <!-- <a class="list-group-item">
                 <span class="list-group-item-text">{{"Version" | translate}}</span>
                 <span class="pull-right">8.5</span>
-            </a>
+            </a> -->
         </div>
         <div class="list-group">
         	<a ng-href="#/about" class="list-group-item">
