--- a/src/templates/modify_trade_password.html
+++ b/src/templates/modify_trade_password.html
@@ -13,7 +13,6 @@
             <form ng-submit="ajaxForm()" name="modifyForm">
                 <div class="kk-input-group flat">
                     <input type="text" name="username" class="form-control" placeholder="{{'Enter Your Mobile No. or Email' | translate}}" ng-model="input.username" required telephone-or-email>
-                    <!-- <span class="tip text-warning" ng-show="modifyForm.username.$invalid && modifyForm.username.$dirty">必填,手机或邮箱</span> -->
                 </div>
                 <div class="kk-input-group flat">
                     <button type="button" class="btn btn-warning btn-sms" ng-click="getVerifycode()" ng-disabled="callbackTimer.counting || modifyForm.username.$invalid">
@@ -21,11 +20,9 @@
                         {{"Get Verification Code" | translate}}
                     </button>
                     <input type="text" name="verifycode" class="form-control" placeholder="请输入验证码" ng-model="input.verifycode" required>
-                    <!-- <span class="tip text-warning" ng-show="modifyForm.verifycode.$invalid && modifyForm.verifycode.$dirty">必填，验证码为6位</span> -->
                 </div>
                 <div class="kk-input-group flat">
-                    <input type="password" name="password" class="form-control" placeholder="请输入交易密码" ng-model="input.password" required ng-pattern="/[0-9]$/" ng-minlength=6 ng-maxlength=6 />
-                    <!-- <span class="tip text-warning" ng-show="modifyForm.password.$invalid && modifyForm.password.$dirty">必填,密码6位数字</span> -->
+                    <input type="password" name="password" class="form-control" placeholder="请输入交易密码" ng-model="input.password" required />
                 </div>
                 <div class="kk-input-group">
                     <button type="submit" class="btn btn-warning block full-width">{{"Change Transaction Password" | translate}}</button>
