--- a/src/templates/release_task.html
+++ b/src/templates/release_task.html
@@ -45,15 +45,15 @@
                         <!-- begin -->
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center semi-wide-80">
-                                <span class="btn section-wide text-ellipsis">开始时间</span>
+                                <span class="btn section-wide text-ellipsis">{{"Start Date" | translate}}</span>
                             </div>
                             <div>
                                 <div class="row">
                                     <div class="col-xs-7 section-wide">
-                                        <input type="text" class="youyi-date form-control col-xs-8" name="from_date" pick-a-date="input.from_date" pick-a-date-options="input.from_date_options" placeholder="请选择" required>
+                                        <input type="text" class="youyi-date form-control col-xs-8" name="from_date" pick-a-date="input.from_date" pick-a-date-options="input.from_date_options" placeholder="{{'Please Fill in' | translate}}" required>
                                     </div>
                                     <div class="col-xs-5 section-wide">
-                                        <input type="text" class="youyi-time form-control col-xs-4" name="from_time" pick-a-time="input.from_time" pick-a-time-options="input.time_options" placeholder="请选择" required>
+                                        <input type="text" class="youyi-time form-control col-xs-4" name="from_time" pick-a-time="input.from_time" pick-a-time-options="input.time_options" placeholder="{{'Please Fill in' | translate}}" required>
                                     </div>
                                 </div>
                             </div>
@@ -61,15 +61,15 @@
                         <!-- end -->
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center semi-wide-80">
-                                <span class="btn section-wide text-ellipsis">结束时间</span>
+                                <span class="btn section-wide text-ellipsis">{{"End Date" | translate}}</span>
                             </div>
                             <div>
                                 <div class="row">
                                     <div class="col-xs-7 section-wide">
-                                        <input type="text" class="youyi-date form-control col-xs-8" name="to_date" pick-a-date="input.to_date" pick-a-date-options="input.to_date_options" placeholder="请选择" required>
+                                        <input type="text" class="youyi-date form-control col-xs-8" name="to_date" pick-a-date="input.to_date" pick-a-date-options="input.to_date_options" placeholder="{{'Please Fill in' | translate}}" required>
                                     </div>
                                     <div class="col-xs-5 section-wide">
-                                        <input type="text" class="youyi-time form-control col-xs-4" name="to_time" pick-a-time="input.to_time" pick-a-time-options="input.to_time_options" placeholder="请选择" required>
+                                        <input type="text" class="youyi-time form-control col-xs-4" name="to_time" pick-a-time="input.to_time" pick-a-time-options="input.to_time_options" placeholder="{{'Please Fill in' | translate}}" required>
                                     </div>
                                 </div>
                             </div>
@@ -85,7 +85,7 @@
                             </div>
                         </div>
                         <div>
-                            <input type="text" class="form-control youyi-flat-input text-right" name="title" ng-model="input.title" required placeholder="请输入标题">
+                            <input type="text" class="form-control youyi-flat-input text-right" name="title" ng-model="input.title" required placeholder="{{'Please Fill in Title' | translate}}">
                         </div>
                         <!-- <div class="semi-fixed-right semi-wide-40">
                             <span class="btn"><i class="fa fa-chevron-right text-gray-light"></i></span>
@@ -121,7 +121,7 @@
                             <!-- <span class="semi-fixed-left semi-wide-40 text-center">
                                 <i class="kk kk-25 kk-checked" ng-class="{'active':input.price !=''}"></i>
                             </span> -->
-                            <input type="number" class="form-control rectangle youyi-flat-input text-right" name="price" ng-model="input.price" placeholder="请填写" required>
+                            <input type="number" class="form-control rectangle youyi-flat-input text-right" name="price" ng-model="input.price" placeholder="{{'Please Fill in' | translate}}" required>
                             <span class="semi-fixed-right semi-wide-40 text-center">
                                 <span class="btn">/{{"Day" | translate}}</span>
                             </span>
@@ -153,7 +153,7 @@
                             </div>
                         </div>
                         <div>
-                            <input type="text" class="form-control youyi-flat-input text-right" name="content" ng-model="input.content" required placeholder="请填写">
+                            <input type="text" class="form-control youyi-flat-input text-right" name="content" ng-model="input.content" required placeholder="{{'Please Fill in' | translate}}">
                         </div>
                         <!-- <div class="semi-fixed-right semi-wide-40">
                             <span class="btn"><i class="fa fa-chevron-right text-gray-light"></i></span>
@@ -196,7 +196,7 @@
                     <div class="section large">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
-                                日期：
+                                {{"Date"| translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
                                 <p>{{input.from_date | date:"yyyy-MM-dd"}}<span class="btn"></span>{{input.from_time | date:"HH:mm"}} 至</p>
@@ -230,10 +230,21 @@
                     <div class="section large" style="padding-bottom:0">
                         <div class="semi-auto semi-left-80">
                             <div class="semi-fixed-left text-center">
-                                总价格：
+                                {{"Total Price" | translate}}：
                             </div>
                             <div style="padding-bottom:8px;">
                                 {{input.total}}
+                            </div>
+                            <div class="kk-line kk-horizon bg-gray-lighter"></div>
+                        </div>
+                    </div>
+                    <div class="section large" style="padding-bottom:0">
+                        <div class="semi-auto semi-left-80">
+                            <div class="semi-fixed-left text-center">
+                                {{"Introduction" | translate}}：
+                            </div>
+                            <div style="padding-bottom:8px;">
+                                {{input.total_money_message}}
                             </div>
                             <div class="kk-line kk-horizon bg-gray-lighter"></div>
                         </div>
@@ -310,7 +321,7 @@
                     <p>{{tips}}</p>
                 </div> -->
                 <div class="modal-footer text-center">
-                    <a ng-href="#/recommands?task_id={{task_id}}" class="btn btn-primary" ng-if="recommands > 0">{{"Our Recommendations" | translate}}</a>
+                    <a ng-href="#/recommands?task_id={{task_id}}" class="btn btn-primary" ng-if="has_recommend == '1'">{{"Our Recommendations" | translate}}</a>
                     <button class="btn btn-default" ng-click="close()">{{"Close" | translate}}</button>
                 </div>
             </div>
