--- a/src/templates/search_translators.html
+++ b/src/templates/search_translators.html
@@ -25,11 +25,11 @@
                 {{translator.nickname}}
                 </span>
             <span class="block">{{translator.return_language}}</span>
-            <span class="block">长期居住地：{{translator.address}}</span>
+            <span class="block">{{"Place" | translate}}：{{translator.address}}</span>
             <span class="block text-ellipsis">{{translator.introduction}}</span>
             </span>
         </a>
         <div class="section text-center m" ng-click="loadMore()" ng-show="translators.length > 0">{{page.message}}</div>
-        <div class="section text-center m" ng-click="loadMore()" ng-show="translators.length == 0">当前关键字无搜索记录，换个试试！</div>
+        <div class="section text-center m" ng-click="loadMore()" ng-show="translators.length == 0">{{"Try Another" | translate}}</div>
     </div>
 </div>
