--- a/src/templates/sidebar.html
+++ b/src/templates/sidebar.html
@@ -37,7 +37,7 @@
 <!-- signin section -->
 <div class="scrollable" ng-show="sidebar.current=='signin'">
     <div class="scrollable-content">
-        <div ng-click="prev()" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>返回</div>
+        <div ng-click="prev()" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>{{"Back"|translate}}</div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
@@ -60,7 +60,7 @@
 <!-- signup section -->
 <div class="scrollable" ng-show="sidebar.current=='signup'">
     <div class="scrollable-content">
-        <div ng-click="prev()" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>返回</div>
+        <div ng-click="prev()" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>{{"Back"|translate}}</div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
@@ -87,7 +87,7 @@
                 <!-- <span class="tip text-warning" ng-show="signupForm.password.$invalid && signupForm.password.$dirty">必填,密码至少8位</span> -->
                 <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
-            <div class="section text-center text-warning" ng-click="show('agreement')">阅读悠译人用户使用协议</div>
+            <div class="section text-center text-warning" ng-click="show('agreement')">{{"Read Privacy" | translate}}</div>
             <div class="kk-input-group">
                 <button type="submit" class="btn btn-warning block full-width" ng-disabled="signupForm.$invalid">{{"Agree and Register" | translate}}</button>
             </div>
@@ -97,7 +97,7 @@
 <!-- signup email section -->
 <div class="scrollable" ng-show="sidebar.current=='signup_email'">
     <div class="scrollable-content">
-        <div ng-click="prev()" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>返回</div>
+        <div ng-click="prev()" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>{{"Back"|translate}}</div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
@@ -119,7 +119,7 @@
                 <!-- <span class="tip text-warning" ng-show="signupEmailForm.password.$invalid && signupEmailForm.password.$dirty">必填,密码至少8位</span> -->
                 <span class="tip text-warning" ng-show="sidebar.error.show">{{sidebar.error.message}}</span>
             </div>
-            <div class="section text-center text-warning" ng-click="show('agreement')">阅读悠译人用户使用协议</div>
+            <div class="section text-center text-warning" ng-click="show('agreement')">{{"Read Privacy" | translate}}</div>
             <div class="kk-input-group">
                 <button type="submit" class="btn btn-warning block full-width" ng-disabled="signupEmailForm.$invalid">{{"Agree and Register" | translate}}</button>
             </div>
@@ -129,7 +129,7 @@
 <!-- forget password -->
 <div class="scrollable" ng-show="sidebar.current=='forget'">
     <div class="scrollable-content">
-        <div ng-click="prev()" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>返回</div>
+        <div ng-click="prev()" class="section text-primary large" style="position:absolute;top:6px"><i class="fa fa-chevron-left"></i>{{"Back"|translate}}</div>
         <div class="text-center">
             <img ng-src="../images/logo_signin.png" alt="">
         </div>
@@ -180,7 +180,8 @@
             </a>
             <a class="list-group-item" ng-click="to('me')">
                 <i class="kk kk-icon kk-sidebar-3 pull-left"></i>
-                <span class="list-group-item-text">{{"Rent Your Talent" | translate}}</span>
+                <span class="list-group-item-text" ng-if="user.is_translate !=1">{{"Rent Your Talent" | translate}}</span>
+                <span class="list-group-item-text" ng-if="user.is_translate ==1">{{"Modify Profile" | translate}}</span>
                 <i class="text-gray-light fa fa-chevron-right pull-right"></i>
             </a>
             <a class="list-group-item" ng-click="to('favorite')">
