--- a/src/templates/favorite.html
+++ b/src/templates/favorite.html
@@ -23,7 +23,7 @@
                             </a>
                         </div>
                         <div class="pull-right">
-                            <a ng-href="#/apply_flow" class="btn btn-default">
+                            <a ng-click="apply(translator.collection_user_id)" class="btn btn-default">
                             	<i class="kk kk-accept"></i>
                             	{{"Apply" | translate}}
                             </a>
